test/semantics/programs/invalid/exhaustive-match.guav
# Should cover all possible matches of y without using "_"

match y with
    | true  -> "This language deserves an A"
    | false -> "This language deserves an F"
